@@ -1,5 +1,11 @@
 2017-10-23  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/sparc/sparc64/multiarch/Makefile (sysdep_routines):
+	Add mul_1-generic.
+	* sysdeps/sparc/sparc64/multiarch/mul_1-generic.S: New file.
+	* sysdeps/sparc/sparc64/multiarch/mul_1.c: Likewise.
+	* sysdeps/sparc/sparc64/multiarch/mul_1.S: Remove file.
+
 	* sysdeps/sparc/sparc64/fpu/multiarch/Makefile
 	(libm-sysdep_routines): Add s_rintf-generic and s_rint-generic
 	objects.
